Fix GithubBrowserSample build error

--- a/GithubBrowserSample/build.gradle
+++ b/GithubBrowserSample/build.gradle
@@ -19,7 +19,7 @@ buildscript {
     apply from: 'versions.gradle'
     addRepos(repositories)
     dependencies {
-        classpath deps.android_gradle_plugin
+        classpath "com.android.tools.build:gradle:android_gradle_plugin"
         classpath deps.kotlin.plugin
         classpath deps.kotlin.allopen
         classpath deps.navigation.safe_args_plugin
