--- a/GithubBrowserSample/app/build.gradle
+++ b/GithubBrowserSample/app/build.gradle
@@ -27,7 +27,7 @@ allOpen {
 }
 android {
     compileSdkVersion build_versions.compile_sdk
-    buildToolsVersion build_versions.build_tools
+//    buildToolsVersion build_versions.build_tools
     defaultConfig {
         applicationId "com.android.example.github"
         minSdkVersion build_versions.min_sdk
@@ -45,8 +45,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    dataBinding {
-        enabled = true
+//    dataBinding {
+//        enabled = true
+//    }
+    buildFeatures {
+        dataBinding true
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
